support audit log to limit records by a count